--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "name": "Mhendo Project",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,9 +9,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-firebase/app": "^17.1.0",
+    "@react-native-community/checkbox": "^0.5.14",
     "react": "18.2.0",
-    "react-native": "0.71.2"
+    "react-native": "0.71.2",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-svg": "^13.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
