--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.14",
+    "@react-native-firebase/app": "^17.3.2",
     "react": "18.2.0",
     "react-native": "0.71.2",
     "react-native-chart-kit": "^6.12.0",
