--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.14",
     "@react-native-firebase/app": "^17.3.2",
+    "@react-native-firebase/firestore": "^17.3.2",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "react": "18.2.0",
     "react-native": "0.71.2",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.8.0"
   },
   "devDependencies": {
